clusters/talos-robbinsdale/apps/home/gateway/gateway-ts.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ts
  labels:
    external-dns: home-ts
spec:
  gatewayClassName: ts
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: raj-wildcard-ts-https
      protocol: HTTPS
      port: 443
      hostname: "*.ts.rajsingh.info"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
        - group: ''
          kind: Secret
          name: raj-wildcard-ts-tls
    - name: luke-wildcard-ts-https
      protocol: HTTPS
      port: 443
      hostname: "*.ts.lukehouge.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
        - group: ''
          kind: Secret
          name: luke-wildcard-ts-tls
    - name: raj-wildcard-https
      protocol: HTTPS
      port: 443
      hostname: "*.rajsingh.info"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
        - group: ''
          kind: Secret
          name: raj-wildcard-tls
    - name: luke-wildcard-https
      protocol: HTTPS
      port: 443
      hostname: "*.lukehouge.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
        - group: ''
          kind: Secret
          name: luke-wildcard-tls
    - name: luke-minio-console-passthrough
      protocol: TLS
      port: 443
      hostname: "console.minio.lukehouge.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Passthrough
    - name: luke-minio-api-passthrough
      protocol: TLS
      port: 443
      hostname: "api.minio.lukehouge.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Passthrough
